경북대 BE 김동규 2단계 - 주문하기 (#209)
* feat: 로그인, 회원가입 시에 인증헤더에 토큰 값 넣기

* feat: loginWithAuthorizationCode() 메서드에 트랜잭션 어노테이션 붙이기

* style: 상수명을 대문자로 변경

* refactor: 카카오대체이메일 만드는 기능을 KakaoUserProperty클래스가 대신하도록 수정

* feat: beforeEach 사용해서 테스트 코드 수정

* style: 패키지 이동

* feat: product가 생성될 때 기본옵션 생성

* style: code style 변경

* style: 패키지 이동으로 인한 코드 변경

* feat: order 엔티티 생성

* feat: order dto 생성

* feat: order repository 생성

* feat: order service생성

* feat: order controller 생성

* feat: order엔티티 id생성 전략 지정

* style: client 패키지 추가

* style: 패키지 이동으로 인한 변경

* feat: Member엔티티에 kakaoAcessToken 필드 추가

* feat: 카카오 메시지 api 사용

* feat: optionNotFound 예외 추가

* refactor: 필요없는 redirect url 정보 삭제

* docs: step2 구현사항 작성

* feat: 상품이 주문되면 해당 상품은 위시리스트에서 삭제

* feat: orderId로 주문 조회 기능 추가

---------

Co-authored-by: eastgyu11 <eastgyu11>